--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 /********** Template CSS **********/
 :root {
     --primary: #86B817;
-    --secondary: red;
+    --secondary:  darkgreen;
     --light: #F5F5F5;
     --dark: #14141F;
 }
