--- a/public/css/style.css
+++ b/public/css/style.css
@@ -337,6 +337,22 @@
     .center{
         margin-left: 100px;
     }
+    .img-fluid2 {
+        max-width: 100%;
+        height: auto;
+    }
+}
+
+@media (min-width: 660px) {
+    .center{
+        margin-left: 190px;
+    }
+}
+
+@media (min-width: 500px) {
+    .center{
+        margin-left: 160px;
+    }
 }
 
 @media (min-width: 992px) {
@@ -349,6 +365,13 @@
     }
     .center{
         margin-left: 280px;
+    }
+    .center2{
+        margin-left: 365px;
+    }
+    .img-fluid2 {
+        max-width: 35%;
+        height: auto;
     }
 }
 
@@ -531,4 +554,20 @@
     font-weight: 600;
     outline: none;
     transition: .5s;
+}
+
+.back3{
+    background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(@/assets/assets/images/b4.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.pad{
+    padding-top: 10px !important;
+}
+
+.form-floating>.form-control:focus, .form-floating>.form-control:not(:placeholder-shown) {
+    padding-top: 1.8250rem !important;
+    padding-bottom: .625rem;
 }
