--- a/public/css/style.css
+++ b/public/css/style.css
@@ -557,7 +557,7 @@
 }
 
 .back3{
-    background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(@/assets/assets/images/b4.jpg);
+    background: linear-gradient(rgba(15, 23, 43, .7), rgba(15, 23, 43, .7)), url(../img/b4.jpg);
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
